# EXVS2-Audio-Editor

./: .gitignore  Cargo.toml  NUS3BANK_Add_Audio_Implementation_Guide.md  NUS3BANK_Audio_Remove_Add_Implementation_Guide.md  NUS3BANK_DTON_Section_Analysis.md  NUS3BANK_GRP_Section_Analysis.md  NUS3BANK_JUNK_Section_Analysis.md  NUS3BANK_Remove_Audio_Implementation_Guide.md  NUS3BANK_Rust_Implementation_Guide.md  README.md  build.rs  gvs_nus3bank_bug.md  gvs_rx78.nus3bank  gvs_rx78.nus3bank.json  index.html  output.nus3bank  output.nus3bank.json  output_nook.nus3bank  output_nook.nus3bank.json  output_ok.nus3bank  output_ok.nus3bank.json  sample2.nus3bank  sample2.nus3bank.json  se_chr_001gundam_001gundam_001.nus3bank  se_chr_001gundam_001gundam_001.nus3bank.json  se_chr_021destny_001strkfr_001.nus3bank  se_chr_021destny_001strkfr_001.nus3bank.json  se_chr_654gexvs2_003glfunl_001.nus3bank  se_chr_654gexvs2_003glfunl_001.nus3bank.json  test.txt  todo_implementation_plan.md  version.json
.cursor/plans/: full_ui_responsive_refactor_59b60816.plan.md  replace_rodio_with_kira_dc00ea0e.plan.md  responsive_audio_player_ui_refactor_f42fc25f.plan.md
.cursor/rules/: development.mdc  egui-rules.mdc
.github/workflows/: release.yml
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs  version_check.rs
src/nus3bank/: binary_utils.rs  debug_json.rs  debug_test.rs  error.rs  export.rs  integration.rs  mod.rs  parser.rs  replace.rs  structures.rs  tests.rs  writer.rs
src/ui/: file_list.rs  main_area.rs  mod.rs  top_panel.rs
src/ui/audio_player/: audio_backend.rs  audio_controls.rs  audio_player_component.rs  audio_state.rs  mod.rs
src/ui/audio_player/audio_backend/: mod.rs  native.rs  trait_def.rs  web.rs
src/ui/main_area/: add_audio_modal.rs  add_audio_utils.rs  audio_file_info.rs  confirm_modal.rs  dton_pending.rs  dton_tones_modal.rs  export_utils.rs  grp_list_modal.rs  grp_pending.rs  grp_template.rs  loop_settings_modal.rs  main_area_core.rs  main_area_filtering.rs  main_area_output.rs  main_area_rendering.rs  main_area_search.rs  main_area_table.rs  main_component.rs  mod.rs  nus3audio_file_utils.rs  prop_edit_modal.rs  prop_pending.rs  remove_utils.rs  replace_utils.rs  search_column.rs  sort_column.rs  table_renderer.rs  toast_message.rs
tools/: USAGE.md  se_chr_001gundam_001gundam_001.nus3bank
